--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@emailjs/browser": "^3.11.0",
     "@heroicons/react": "^2.0.18",
+    "antd": "^5.22.1",
     "framer-motion": "^10.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-router-dom": "^6.28.0",
     "react-scroll": "^1.8.9",
     "react-type-animation": "^3.1.0"
   },
